--- a/compose.yml
+++ b/compose.yml
@@ -14,8 +14,24 @@ services:
       - DOCKER_HOST=unix:///var/run/docker.sock
       - START_WEB=${START_WEB:-}
       #- KINESIS_ERROR_PROBABILITY=${KINESIS_ERROR_PROBABILITY- }
-      - LOCALSTACK_HOST="${LOCALSTACK_DOCKER_NAME:-localstack_main}"
+      - LOCALSTACK_HOST=localhost #"${LOCALSTACK_DOCKER_NAME:-localstack_main}"
     volumes:
-      - ${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack
+      - ${LOCALSTACK_VOLUME_DIR:-./volume/localstack}:/var/lib/localstack
       - /var/run/docker.sock:/var/run/docker.sock
-      - ${TMPDIR:-./tmp/localstack}:/tmp/localstack
+      - ${TMPDIR:-./volume/localstack-tmp}:/tmp/localstack
+  
+  mysql:
+    image: mysql:8.1.0
+    container_name: mysql
+
+    environment:
+      MYSQL_ROOT_PASSWORD: test_admin
+      MYSQL_DATABASE: test_db
+      MYSQL_USER: test_admin
+      MYSQL_PASSWORD: test_admin
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+    ports:
+      - 3306:3306
+    volumes:
+      - ${MYSQL_VOLUME_DIR:-./volume/mysql/db}:/var/lib/mysql
+      #- ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
